# mycelix-health

./: .gitignore  ADVANCED_FEATURES_ROADMAP.md  COMPLIANCE_STATUS.md  CONTRACT.md  CONTRIBUTING.md  CRYPTO_AUDIT_GUIDE.md  Cargo.toml  DNA_BUILD_INSTRUCTIONS.md  IMPROVEMENT_PLAN.md  README.md  REVIEW_REPORT.md  REVOLUTIONARY_VISION.md  REenablement_ROADMAP.md  RUNNING.md  SCOPE_AUDIT.md  VISION_COMPREHENSIVE_HEALTHCARE.md  deny.toml  flake.nix  happ.yaml  justfile
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
_archive-2026-02-15/: README.md
_archive-2026-02-15/chronic_care/coordinator/: Cargo.toml
_archive-2026-02-15/chronic_care/coordinator/src/: lib.rs
_archive-2026-02-15/chronic_care/integrity/: Cargo.toml
_archive-2026-02-15/chronic_care/integrity/src/: lib.rs
_archive-2026-02-15/commons/integrity/: Cargo.toml
_archive-2026-02-15/commons/integrity/src/: lib.rs
_archive-2026-02-15/hdc_genetics/coordinator/: Cargo.toml
_archive-2026-02-15/hdc_genetics/coordinator/src/: lib.rs
_archive-2026-02-15/mobile_support/coordinator/: Cargo.toml
_archive-2026-02-15/mobile_support/coordinator/src/: lib.rs
_archive-2026-02-15/moment/coordinator/: Cargo.toml
_archive-2026-02-15/moment/coordinator/src/: lib.rs
_archive-2026-02-15/pediatric/coordinator/: Cargo.toml
_archive-2026-02-15/pediatric/coordinator/src/: lib.rs
_archive-2026-02-15/research_commons/coordinator/: Cargo.toml
_archive-2026-02-15/research_commons/coordinator/src/: lib.rs
_archive-2026-02-15/trial_matching/coordinator/: Cargo.toml
_archive-2026-02-15/trial_matching/coordinator/src/: lib.rs
_archive-2026-02-15/twin/coordinator/: Cargo.toml
_archive-2026-02-15/twin/coordinator/src/: lib.rs
_archive-2026-02-15/zkhealth/coordinator/: Cargo.toml
_archive-2026-02-15/zkhealth/coordinator/src/: lib.rs
apps/leptos/: Cargo.toml  Trunk.toml  index.html
apps/leptos/src/: app.rs  holochain.rs  main.rs
apps/leptos/src/components/: break_glass.rs  homeostasis_bg.rs  mod.rs  mycelial_node.rs  nav.rs
apps/leptos/src/crypto/: bip39_wordlist.rs  key_manager.rs  mod.rs  seed_phrase.rs
apps/leptos/src/pages/: consent.rs  consent_wizard.rs  home.rs  metabolism.rs  mod.rs  onboarding.rs  privacy.rs  records.rs  settings.rs
apps/leptos/src/zome_clients/: consent.rs  mod.rs  patient.rs  records.rs
apps/leptos/style/: main.css
crates/hdc-core/: Cargo.toml  README.md
crates/hdc-core/benches/: comprehensive.rs  encoding.rs  learned_encoding.rs
crates/hdc-core/docs/: API.md  INTEGRATION.md
crates/hdc-core/examples/: learned_encoding_demo.rs  simd_bench.rs
crates/hdc-core/src/: batch.rs  confidence.rs  differential_privacy.rs  encoding.rs  gpu.rs  lib.rs  ops.rs  rare_disease_pipeline.rs  similarity.rs  vcf.rs
crates/hdc-core/tests/: extended_tests.rs  integration_tests.rs
crates/hdc-experiments/: Cargo.toml  PUBLICATION_DRAFT.md  VALIDATION_REPORT.md
crates/hdc-experiments/data/: hla_allele_frequencies.json  real_coi_sequences.json
crates/hdc-experiments/data/real/: chimpanzee.fasta  gorilla.fasta  monarch_butterfly.fasta  raven.fasta  sparrow.fasta  swallowtail.fasta
crates/hdc-experiments/data/real/hla/: hla_a_nuc.fasta  hla_b_nuc.fasta  hla_drb1_nuc.fasta
crates/hdc-experiments/data/real/pharmvar/: cyp2d6_alleles.xlsx  cyp2d6_page.html  gene_conditions.txt
crates/hdc-experiments/src/: benchmark.rs  cli_tools.rs  fasta.rs  hla.rs  main.rs  pharmacogenomics.rs  prefilter.rs  privacy.rs  real_hla.rs  real_taxonomy.rs  taxonomy.rs
crates/hdc-experiments/submission/: README.md  manuscript.md
crates/health-crypto/: Cargo.toml
crates/health-crypto/src/: lib.rs
crates/health-fl/: Cargo.toml
crates/health-fl/examples/: health_sovereignty_demo.rs
crates/health-fl/src/: hdc_encrypted.rs  homomorphic.rs  lib.rs
crates/health-validation/: Cargo.toml
crates/health-validation/src/: lib.rs
crates/health-zkp/: Cargo.toml
crates/health-zkp/src/: lib.rs  prover.rs  verifier.rs
crates/health-zkp/src/circuits/: mod.rs  range_proof.rs
crates/health-zkp/tests/: e2e_health_attestation.rs
deploy/: docker-compose.health.yml  nginx-health.conf
dna/: dna.yaml
docs/: ARCHITECTURE.md  AUDIT_PACKAGE.md  CLINICAL_DEPLOYMENT_CHECKLIST.md  CLINICAL_TRIALS.md  DIFFERENTIAL_PRIVACY.md  DP_AUDIT_REPORT.md  ECOSYSTEM_INTEGRATION.md  HIPAA_ZKP_COMPLIANCE.md  PILOT_PROPOSAL.md  REVOLUTIONARY_FEATURES.md  ZOME_ANALYSIS.md
release/: hdc-experiments
scripts/: benchmark-health.sh  first-zome-call.py  pack-and-run.sh  quick-test.sh
sdk/: .npmignore  README.md  package-lock.json  package.json  vitest.config.ts
tests/: Cargo.toml
tests/integration/: health.test.ts  package.json
tests/src/: access_control.rs  advocate.rs  bridge.rs  byzantine.rs  care_teams.rs  consent.rs  delegation.rs  dividends.rs  dp_property_tests.rs  encryption.rs  hipaa_compliance.rs  insurance.rs  lib.rs  notifications.rs  patient.rs  prescriptions.rs  provider.rs  records.rs  trials.rs  twin.rs  zkhealth.rs
tests/sweettest/: Cargo.toml  README.md
tests/sweettest/tests/: cds_safety.rs  consent_ownership.rs  e2e_patient_flow.rs  fhir_bridge.rs  fhir_integration.rs  hdc_genetics.rs
workdir/: happ.yaml
zomes/: README_TEMPLATE.md
zomes/bridge/coordinator/: Cargo.toml
zomes/bridge/coordinator/src/: lib.rs
zomes/cds/coordinator/: Cargo.toml
zomes/cds/coordinator/src/: lib.rs
zomes/cds/integrity/: Cargo.toml
zomes/cds/integrity/src/: lib.rs
zomes/chronic_care/coordinator/: Cargo.toml
zomes/chronic_care/coordinator/src/: lib.rs
zomes/commons/coordinator/: Cargo.toml
zomes/commons/coordinator/src/: lib.rs
zomes/consent/coordinator/: Cargo.toml
zomes/consent/coordinator/src/: lib.rs
zomes/consent/integrity/: Cargo.toml
zomes/consent/integrity/src/: lib.rs
zomes/credentials/coordinator/: Cargo.toml
zomes/credentials/coordinator/src/: lib.rs
zomes/shared/: Cargo.toml
zomes/shared/proptest-regressions/dp_core/: budget.txt
zomes/shared/src/: lib.rs
zomes/shared/src/dp_core/: budget.rs  gaussian.rs  laplace.rs  mod.rs  rng.rs  validation.rs
(+278 files in other folders)
