[workspace]
resolver = "2"
members = [
    # ── Tier 1: MVP Core (7 zomes + shared) ──
    "zomes/shared",
    "zomes/patient/integrity",
    "zomes/patient/coordinator",
    "zomes/provider/integrity",
    "zomes/provider/coordinator",
    "zomes/records/integrity",
    "zomes/records/coordinator",
    "zomes/prescriptions/integrity",
    "zomes/prescriptions/coordinator",
    "zomes/consent/integrity",
    "zomes/consent/coordinator",
    "zomes/bridge/integrity",
    "zomes/bridge/coordinator",

    # ── DEFERRED: Tier 2 (re-enable when needed) ──
    # "zomes/trials/integrity",
    # "zomes/trials/coordinator",
    # "zomes/insurance/integrity",
    # "zomes/insurance/coordinator",
    # "zomes/fhir_mapping/integrity",
    # "zomes/fhir_mapping/coordinator",
    # "zomes/fhir_bridge/integrity",
    # "zomes/fhir_bridge/coordinator",
    # "zomes/cds/integrity",
    # "zomes/cds/coordinator",
    # "zomes/provider_directory/integrity",
    # "zomes/provider_directory/coordinator",
    # "zomes/telehealth/integrity",
    # "zomes/telehealth/coordinator",
    # "zomes/nutrition/integrity",
    # "zomes/nutrition/coordinator",
    # "crates/hdc-core",
    # "crates/hdc-experiments",

    # ── ARCHIVED: Tier 3 (22 zomes moved to _archive-2026-02-15/) ──
    # See _archive-2026-02-15/README.md for details
]

# Tests are separate - run with: cargo test -p mycelix-health-tests
exclude = ["tests"]

[workspace.dependencies]
# Holochain 0.7 compatible
hdi = "0.7"
hdk = "0.6"

# Required by hdk macros
holochain_serialized_bytes = "0.0.56"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
thiserror = "1.0"
derive_more = "0.99"

# WASM compatibility
# WASM compatibility - getrandom 0.3 with custom backend (HDK provides __getrandom_v03_custom)
# NOTE: Do NOT use features = ["js"] or ["wasm_js"] - they pull in wasm-bindgen
# which is incompatible with Holochain's WASM runtime.
getrandom_03 = { package = "getrandom", version = "0.3" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
