[workspace]
resolver = "2"
members = [
    # ── Tier 1: MVP Core (7 zomes + shared) ──
    "zomes/shared",
    "zomes/patient/integrity",
    "zomes/patient/coordinator",
    "zomes/provider/integrity",
    "zomes/provider/coordinator",
    "zomes/records/integrity",
    "zomes/records/coordinator",
    "zomes/prescriptions/integrity",
    "zomes/prescriptions/coordinator",
    "zomes/consent/integrity",
    "zomes/consent/coordinator",
    "zomes/bridge/integrity",
    "zomes/bridge/coordinator",

    # ── Tier 2: Extended (promoted 2026-03-18) ──
    "zomes/trials/integrity",
    "zomes/trials/coordinator",
    "zomes/insurance/integrity",
    "zomes/insurance/coordinator",
    "zomes/fhir_mapping/integrity",
    "zomes/fhir_mapping/coordinator",
    "zomes/fhir_bridge/integrity",
    "zomes/fhir_bridge/coordinator",
    "zomes/cds/integrity",
    "zomes/cds/coordinator",
    "zomes/provider_directory/integrity",
    "zomes/provider_directory/coordinator",
    "zomes/telehealth/integrity",
    "zomes/telehealth/coordinator",
    "zomes/nutrition/integrity",
    "zomes/nutrition/coordinator",
    "crates/hdc-core",
    "crates/hdc-experiments",

    # ── Tier 3: Behavioral Health (restored 2026-03-26) ──
    "zomes/mental_health/integrity",
    "zomes/mental_health/coordinator",

    # ── Tier 3: Data Dividends (restored 2026-03-28) ──
    "zomes/dividends/integrity",
    "zomes/dividends/coordinator",

    # ── ARCHIVED: Tier 3 remainder (20 zomes in _archive-2026-02-15/) ──
    # See _archive-2026-02-15/README.md for details
]

# Tests are separate - run with: cargo test -p mycelix-health-tests
exclude = ["tests"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Holochain 0.7 compatible
hdi = "0.7.0"
hdk = "0.6.0"

# Required by hdk macros
holochain_serialized_bytes = "0.0.56"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bridge
mycelix-bridge-common = { path = "../crates/mycelix-bridge-common" }

# Utilities
chrono = "0.4"
thiserror = "1.0"
derive_more = "0.99"

# WASM compatibility
# WASM compatibility - getrandom 0.3 with custom backend (HDK provides __getrandom_v03_custom)
# NOTE: Do NOT use features = ["js"] or ["wasm_js"] - they pull in wasm-bindgen
# which is incompatible with Holochain's WASM runtime.
getrandom_03 = { package = "getrandom", version = "0.3" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
