[package]
name = "mycelix-health-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "mycelix_health_tests"
path = "src/lib.rs"

[dependencies]
# Serialization - specify versions since excluded from workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing utilities
rand = "0.8"

# NOTE: Full conductor integration tests require running in nix develop
# environment with libclang. These tests focus on validation logic.
# Tokio is commented out due to mio compatibility issues with Rust 1.92+
# [dev-dependencies]
# tokio = { version = "1.38", features = ["full"] }
# futures = "0.3"
