# Copyright (C) 2024-2026 Tristan Stoltz / Luminous Dynamics
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]

[package]
name = "mycelix-health-portal"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Patient health sovereignty portal — Biological Sovereignty design"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", "Window", "Document", "HtmlCanvasElement", "HtmlInputElement",
    "WebGl2RenderingContext", "WebGlProgram", "WebGlShader", "WebGlBuffer",
    "WebGlUniformLocation", "EventTarget", "Navigator", "Storage", "Location",
    "Performance", "CanvasRenderingContext2d", "Crypto",
] }
console_error_panic_hook = "0.1"
gloo-timers = { version = "0.3", features = ["futures"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
