[package]
name = "hdc-experiments"
version = "0.1.0"
edition = "2021"
description = "HDC genomics experiments for scientific validation"
license = "MIT"

[[bin]]
name = "hdc-experiments"
path = "src/main.rs"

[dependencies]
hdc-core = { path = "../hdc-core" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.8"
indicatif = "0.17"
colored = "2.1"

[dev-dependencies]
