[package]
name = "mycelix-health-crypto"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Post-quantum hybrid encryption for health records — ML-KEM-768 + XChaCha20-Poly1305"

[dependencies]
ml-kem = "0.2"
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
getrandom = "0.2"
