[package]
name = "hdc-genetics-sweettest"
version = "0.1.0"
edition = "2021"
publish = false
description = "Sweettest integration tests for HDC Genetics zome"

[dependencies]
# Holochain test framework
holochain = { version = "0.6.0-dev.3", default-features = false, features = ["test_utils"] }
hdk = "0.6.0"
holo_hash = "0.6.0"
holochain_zome_types = "0.6.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"

[[test]]
name = "hdc_genetics"
path = "tests/hdc_genetics.rs"

[[test]]
name = "fhir_bridge"
path = "tests/fhir_bridge.rs"
