[package]
name = "chronic_care"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "chronic_care"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chronic_care_integrity = { path = "../integrity" }
mycelix-health-shared = { path = "../../shared" }

[features]
default = []
