[package]
name = "commons_integrity"
version = "0.1.0"
edition = "2021"
description = "Health as a Commons integrity zome - differential privacy and collective insights"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
