[package]
name = "mobile_support"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "mobile_support"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
mobile_support_integrity = { path = "../integrity" }
mycelix-health-shared = { path = "../../shared" }
