[package]
name = "pediatric"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pediatric"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pediatric_integrity = { path = "../integrity" }
mycelix-health-shared = { path = "../../shared" }

[features]
default = []
