[package]
name = "trial_matching"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "trial_matching"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
trial_matching_integrity = { path = "../integrity" }
mycelix-health-shared = { path = "../../shared" }
