[package]
name = "zkhealth_coordinator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "zkhealth_coordinator"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zkhealth_integrity = { path = "../integrity" }
mycelix-health-shared = { path = "../../shared" }
