[package]
name = "cds"
version = "0.1.0"
edition = "2021"
description = "Clinical Decision Support coordinator zome - drug interactions, alerts, guidelines"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cds_integrity = { path = "../integrity" }
mycelix-health-shared = { path = "../../shared" }

[features]
default = []
