[package]
name = "cds_integrity"
version = "0.1.0"
edition = "2021"
description = "Clinical Decision Support integrity zome - drug interactions, alerts, guidelines"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
getrandom = { workspace = true }

[features]
default = []
