[package]
name = "commons_coordinator"
version = "0.1.0"
edition = "2021"
description = "Health as a Commons coordinator zome - differential privacy and collective insights"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
commons_integrity = { path = "../integrity" }
patient_integrity = { path = "../../patient/integrity" }
mycelix-health-shared = { path = "../../shared" }

[features]
default = []
