[package]
name = "consent"
version = "0.1.0"
edition = "2021"
description = "Patient consent and data access authorization coordinator zome"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
consent_integrity = { path = "../integrity" }
patient_integrity = { path = "../../patient/integrity" }

[features]
default = []
