[package]
name = "consent_integrity"
version = "0.1.0"
edition = "2021"
description = "Patient consent and data access authorization integrity zome"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hdi = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Force getrandom feature unification for WASM builds

[features]
default = []
