[package]
name = "credentials"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "credentials"

[dependencies]
getrandom = { workspace = true }
holochain_serialized_bytes = { workspace = true }
hdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
credentials_integrity = { workspace = true }
